--- a/journal.html
+++ b/journal.html
@@ -56,15 +56,7 @@
 		</div>
 	</header>
 	<!-- header section end -->
-	<section class="intro-section-journal">
-		<div class="container text-center">
-			<div class="row">
-				<div class="col-xl-10 offset-xl-1">
-					<h2 class="section-title">JOURNAL</h2>
-				</div>
-			</div>
-		</div>
-	</section>
+
 	<!-- intro section start -->
 	<section class="">
 		<div class="container text-center">
@@ -87,11 +79,11 @@
 				<div class="col-md-6">
 					<div class="blog-item">
 						<figure class="thumb">
-							<a href="articles.html"><img src="img/journal/zahahadid.jpg" alt=""></a>
+							<a href="index.html" target="_blank"><img src="img/journal/zahahadid.jpg" alt=""></a>
 						</figure>
 						<article class="blog-content">
-							<h2><a href="articles.html" >ZAHA HADID EN 5 PROJETS PHARE</a></h2>
-							<p><a href="articles.html" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</a></p>
+							<h2><a href="index.html" target="_blank">ZAHA HADID EN 5 PROJETS PHARE</a></h2>
+							<p><a href="index.html" target="_blank">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</a></p>
 						</article>
 					</div>
 				</div>
@@ -99,11 +91,11 @@
 				<div class="col-md-6">
 					<div class="blog-item">
 						<figure class="thumb">
-							<a href="articles.html" target="_blank"><img src="img/journal/urbanfarming.jpg" alt=""></a>
+							<a href="index.html" target="_blank"><img src="img/journal/urbanfarming.jpg" alt=""></a>
 						</figure>
 						<article class="blog-content">
-							<h2><a href="articles.html" target="_blank">URBAN FARMING : LA VILLE DE DEMAIN</a></h2>
-							<p><a href="articles.html" target="_blank">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</a></p>
+							<h2><a href="index.html" target="_blank">URBAN FARMING : LA VILLE DE DEMAIN</a></h2>
+							<p><a href="index.html" target="_blank">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</a></p>
 						</article>
 					</div>
 				</div>
@@ -111,11 +103,11 @@
 				<div class="col-md-6">
 					<div class="blog-item">
 						<figure class="thumb">
-							<a href="articles.html" target="_blank"><img src="img/journal/zahahadid.jpg" alt=""></a>
+							<a href="index.html" target="_blank"><img src="img/journal/zahahadid.jpg" alt=""></a>
 						</figure>
 						<article class="blog-content">
-							<h2><a href="articles.html" target="_blank">ZAHA HADID EN 5 PROJETS PHARE</a></h2>
-							<p><a href="articles.html" target="_blank">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</a></p>
+							<h2><a href="index.html" target="_blank">ZAHA HADID EN 5 PROJETS PHARE</a></h2>
+							<p><a href="index.html" target="_blank">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</a></p>
 						</article>
 					</div>
 				</div>
@@ -123,11 +115,11 @@
 				<div class="col-md-6">
 					<div class="blog-item">
 						<figure class="thumb">
-							<a href="articles.html" target="_blank"><img src="img/journal/zahahadid.jpg" alt=""></a>
+							<a href="index.html" target="_blank"><img src="img/journal/zahahadid.jpg" alt=""></a>
 						</figure>
 						<article class="blog-content">
-							<h2><a href="articles.html" target="_blank">ZAHA HADID EN 5 PROJETS PHARE</a></h2>
-							<p><a href="articles.html" target="_blank">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</a></p>
+							<h2><a href="index.html" target="_blank">ZAHA HADID EN 5 PROJETS PHARE</a></h2>
+							<p><a href="index.html" target="_blank">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</a></p>
 						</article>
 					</div>
 				</div>
