--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
 					I’m Kevin Crespin a multidisciplinary digital student based in Paris, focused on UI/UX design, Web Design and Photography. I studied visual arts and photography during my high school years at Institut Saint Luc in Tournai (Belgium) and I’m currently in a Bachelor's degree at ESD - Ecole supérieure du digitale in digital strategy and web design.
 					<br>
 					<br>
-				  I also write about the news in the world, new technologies, interior design, architecture... and many of my passions ! You can discover them by clicking on the <a href="journal.html" target="_blank" class="linkjournal">"Journal"</a> categories.
+				  I also write articles about the news in the world, new technologies, interior design, architecture... and many of my passions ! You can discover them by clicking on the <a href="journal.html" target="_blank" class="linkjournal">"Journal"</a> categories.
 					</p>
 					<div class="social-links">
 						<a href="https://www.instagram.com/kevincrespin/" target="_blank"><span class="fa fa-instagram fa-1x"></span></a>
