--- a/index.html
+++ b/index.html
@@ -74,34 +74,123 @@
 
 	<!-- portfolio section start -->
 	<section class="portfolio-section">
+
 		<div class="container">
 			<div class="col-lg-12">
 					<ul class="portfolio-filter controls">
-						<li class="control" data-filter="all">All</li>
+						<li class="control" data-filter=".all">All</li>
 						<li class="control" data-filter=".graphicdesign">Graphic Design</li>
 						<li class="control" data-filter=".uiuxdesign">UI/UX Design</li>
 						<li class="control" data-filter=".photography">Photography</li>
 					</ul>
 			</div>
 		</div>
+
 		<div class="container-fluid p-0">
 			<div class="row portfolios-area">
-  <!-- portfolio section finish -->
 
 
-				<div class="mix col-md-6 col-lg-3 photography">
-					<a href="img/portfolio/PARIS_THE_CITY_OF_SPEED/PARIS_THE_CITY_OF_SPEED_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PARIS_THE_CITY_OF_SPEED/PARIS_THE_CITY_OF_SPEED_1.jpg">
-						<div class="pi-inner">
+				<div class="mix col-md-6 col-lg-3 uiuxdesign all">
+					<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_1.jpg">
+						<div class="pi-inner" data-toggle="modal" data-target="#modal1">
 							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>PARIS THE CITY OF SPEED</h2>
+						<h2>PARIS THE CITY OF FAST</h2>
 						<p>Photographies (3)</p>
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<!-- Carousel -->
+				<div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content" >
+							<!-- <div class="modal-body"> -->
+								<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+									<div class="carousel-inner">
+
+										<div class="carousel-item active">
+											<img class="d-block w-100" src="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_1.jpg" alt="First slide">
+										</div>
+
+										<div class="carousel-item">
+											<img class="d-block w-100" src="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_2.jpg" alt="Second slide">
+										</div>
+
+										<div class="carousel-item">
+											<img class="d-block w-100" src="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_3.jpg" alt="Third slide">
+										</div>
+
+									<!-- -->
+									</div>
+									<!-- -->
+
+									<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+										<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+										<span class="sr-only">Previous</span>
+									</a>
+									<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+										<span class="carousel-control-next-icon" aria-hidden="true"></span>
+										<span class="sr-only">Next</span>
+									</a>
+								</div>
+						</div>
+					</div>
+				</div>
+			<!-- Carousel fin -->
+
+			<div class="mix col-md-6 col-lg-3 photography all">
+				<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_1.jpg">
+					<div class="pi-inner" data-toggle="modal" data-target="#modal2">
+						<h2>+ See project</h2>
+					</div>
+				</a>
+				<div class="portfolio-meta">
+					<h2>PARIS THE CITY OF FAST</h2>
+					<p>Photographies (3)</p>
+				</div>
+			</div>
+
+			<!-- Carousel -->
+			<div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content" >
+						<!-- <div class="modal-body"> -->
+							<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+								<div class="carousel-inner">
+
+									<div class="carousel-item active">
+										<img class="d-block w-100" src="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_1.jpg" alt="First slide">
+									</div>
+
+									<div class="carousel-item">
+										<img class="d-block w-100" src="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_2.jpg" alt="Second slide">
+									</div>
+
+									<div class="carousel-item">
+										<img class="d-block w-100" src="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_3.jpg" alt="Third slide">
+									</div>
+
+								<!-- -->
+								</div>
+								<!-- -->
+
+								<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+									<span class="sr-only">Previous</span>
+								</a>
+								<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+									<span class="carousel-control-next-icon" aria-hidden="true"></span>
+									<span class="sr-only">Next</span>
+								</a>
+							</div>
+					</div>
+				</div>
+			</div>
+		<!-- Carousel fin -->
+
+				<div class="mix col-md-6 col-lg-3 graphicdesign all">
 					<a href="img/portfolio/BRUXELLES_LA_VILLE_GRISE/BRUXELLES_LA_VILLE_GRISE_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/BRUXELLES_LA_VILLE_GRISE/BRUXELLES_LA_VILLE_GRISE_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
@@ -113,7 +202,7 @@
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<div class="mix col-md-6 col-lg-3 uiuxdesign all">
 					<a href="img/portfolio/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
@@ -125,7 +214,7 @@
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<div class="mix col-md-6 col-lg-3 photography all">
 					<a href="img/portfolio/PFW2017_L_OREAL_PARIS/PFW2017_L_OREAL_PARIS_GUEST_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PFW2017_L_OREAL_PARIS/PFW2017_L_OREAL_PARIS_GUEST_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
@@ -137,7 +226,7 @@
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<div class="mix col-md-6 col-lg-3 photography all">
 					<a href="img/portfolio/PFW2017_L_OREAL_PARIS/PFW2017_L_OREAL_PARIS_SHOW_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PFW2017_L_OREAL_PARIS/PFW2017_L_OREAL_PARIS_SHOW_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
@@ -149,7 +238,7 @@
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<div class="mix col-md-6 col-lg-3 photography all">
 					<a href="img/portfolio/Antti_Lovag_Palais_Bulles_de_Pierre_Cardin/Antti_Lovag_Palais_Bulles_de_Pierre_Cardin_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/Antti_Lovag_Palais_Bulles_de_Pierre_Cardin/Antti_Lovag_Palais_Bulles_de_Pierre_Cardin_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
@@ -161,7 +250,7 @@
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<div class="mix col-md-6 col-lg-3 photography all">
 					<a href="img/portfolio/FONDATION_LOUIS_VUITTON/FONDATION_LOUIS_VUITTON_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/FONDATION_LOUIS_VUITTON/FONDATION_LOUIS_VUITTON_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
@@ -173,7 +262,7 @@
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<div class="mix col-md-6 col-lg-3 photography all">
 					<a href="img/portfolio/GARE_AVIGNON_TGV/GARE_AVIGNON_TGV_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/GARE_AVIGNON_TGV/GARE_AVIGNON_TGV_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
@@ -185,7 +274,7 @@
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<div class="mix col-md-6 col-lg-3 photography all">
 					<a href="img/portfolio/BRUXELLES_QUARTIER_EUROPEEN/BRUXELLES_QUARTIER_EUROPEEN_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/BRUXELLES_QUARTIER_EUROPEEN/BRUXELLES_QUARTIER_EUROPEEN_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
@@ -197,7 +286,7 @@
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<div class="mix col-md-6 col-lg-3 photography all">
 					<a href="img/portfolio/PORTRAIT_LUMIERE/PORTRAIT_LUMIERE.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PORTRAIT_LUMIERE/PORTRAIT_LUMIERE.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
@@ -209,7 +298,7 @@
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<div class="mix col-md-6 col-lg-3 photography all">
 					<a href="img/portfolio/CAP_BLANC_NEZ_SUNSET/CAP_BLANC_NEZ_SUNSET_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/CAP_BLANC_NEZ_SUNSET/CAP_BLANC_NEZ_SUNSET_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
@@ -221,7 +310,7 @@
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<div class="mix col-md-6 col-lg-3 photography all">
 					<a href="img/portfolio/MONACO_BLUE_CORRIDOR/MONACO_BLUE_CORRIDOR_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/MONACO_BLUE_CORRIDOR/MONACO_BLUE_CORRIDOR_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
@@ -233,7 +322,7 @@
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<div class="mix col-md-6 col-lg-3 photography all">
 					<a href="img/portfolio/COTE_D_AZUR_BOAT_SERIE/COTE_D_AZUR_BOAT_SERIE_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/COTE_D_AZUR_BOAT_SERIE/COTE_D_AZUR_BOAT_SERIE_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
@@ -245,7 +334,7 @@
 					</div>
 				</div>
 
-				<div class="mix col-md-6 col-lg-3 photography">
+				<div class="mix col-md-6 col-lg-3 photography all">
 					<a href="img/portfolio/MAN/MAN.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/MAN/MAN.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
