--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<ul class="portfolio-filter controls">
 						<li class="control" data-filter=".all">All</li>
 						<li class="control" data-filter=".graphicdesign">Graphic Design</li>
-						<li class="control" data-filter=".uiuxdesign">UI/UX Design</li>
+						<li class="control" data-filter=".uiuxdesign">Illustration</li>
 						<li class="control" data-filter=".photography">Photography</li>
 					</ul>
 			</div>
@@ -230,7 +230,7 @@
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>ARCHITECTURE<br>VERS L'INFINI ET L'AU DELA</h2>
+						<h2>ARCHITECTURE<br>MONUMENTAL</h2>
 						<p>Photographies (2)</p>
 					</div>
 				</div>
@@ -249,6 +249,10 @@
 
 										<div class="carousel-item">
 											<img class="d-block w-100" src="img/portfolio/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA_2.jpg" alt="Second slide">
+										</div>
+
+										<div class="carousel-item">
+											<img class="d-block w-100" src="img/portfolio/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA_3.jpg" alt="Third slide">
 										</div>
 
 									<!-- -->
@@ -687,26 +691,6 @@
 									<img class="d-block w-100" src="img/portfolio/KID/kid_3.jpg" alt="Third slide">
 								</div>
 
-								<div class="carousel-item ">
-									<img class="d-block w-100" src="img/portfolio/KID/kid_4.jpg" alt="Fourth slide">
-								</div>
-
-								<div class="carousel-item ">
-									<img class="d-block w-100" src="img/portfolio/KID/kid_5.jpg" alt="Fifth slide">
-								</div>
-
-								<div class="carousel-item ">
-									<img class="d-block w-100" src="img/portfolio/KID/kid_6.jpg" alt="Sixth slide">
-								</div>
-
-								<div class="carousel-item ">
-									<img class="d-block w-100" src="img/portfolio/KID/kid_7.jpg" alt="Seventh slide">
-								</div>
-
-								<div class="carousel-item ">
-									<img class="d-block w-100" src="img/portfolio/KID/kid_8.jpg" alt="height slide">
-								</div>
-
 							<!-- -->
 							</div>
 							<!-- -->
@@ -732,7 +716,7 @@
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>BRUXELLES : QUARTIER EUROPÉEN</h2>
+						<h2>ARCHITECTURE <br> BRUXELLES : QUARTIER EUROPÉEN</h2>
 						<p>Photographies (3)</p>
 					</div>
 				</div>
@@ -774,52 +758,6 @@
 					</div>
 				</div>
 			<!-- Carousel fin -->
-
-			<div class="mix col-md-6 col-lg-3 photography all">
-				<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/ANNECY_ENTRE_LACS_ET_MONTAGNES/ANNECY_ENTRE_LACS_ET_MONTAGNES_1.jpg">
-					<div class="pi-inner" data-toggle="modal" data-target="#modal6">
-						<h2>+ See project</h2>
-					</div>
-				</a>
-				<div class="portfolio-meta">
-					<h2>ANNECY : ENTRE LAC ET MONTAGNES</h2>
-					<p>Photographies (2)</p>
-				</div>
-			</div>
-
-			<!-- Carousel -->
-			<div class="modal fade" id="modal6" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content" >
-						<!-- <div class="modal-body"> -->
-							<div id="carouselExampleControls6" class="carousel slide" data-ride="carousel">
-								<div class="carousel-inner">
-
-									<div class="carousel-item active">
-										<img class="d-block w-100" src="img/portfolio/ANNECY_ENTRE_LACS_ET_MONTAGNES/ANNECY_ENTRE_LACS_ET_MONTAGNES_1.jpg" alt="First slide">
-									</div>
-
-									<div class="carousel-item">
-										<img class="d-block w-100" src="img/portfolio/ANNECY_ENTRE_LACS_ET_MONTAGNES/ANNECY_ENTRE_LACS_ET_MONTAGNES_2.jpg" alt="Second slide">
-									</div>
-
-								<!-- -->
-								</div>
-								<!-- -->
-
-								<a class="carousel-control-prev" href="#carouselExampleControls6" role="button" data-slide="prev">
-									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-									<span class="sr-only">Previous</span>
-								</a>
-								<a class="carousel-control-next" href="#carouselExampleControls6" role="button" data-slide="next">
-									<span class="carousel-control-next-icon" aria-hidden="true"></span>
-									<span class="sr-only">Next</span>
-								</a>
-							</div>
-					</div>
-				</div>
-			</div>
-		<!-- Carousel fin -->
 
 		<div class="mix col-md-6 col-lg-3 graphicdesign all">
 			<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/BIG_BROTHER/big_brother.jpg">
@@ -911,7 +849,7 @@
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>ARCHITECTURE<br>MONACO BLUE CORRIDOR</h2>
+						<h2>ARCHITECTURE<br>MONACO</h2>
 						<p>Photographies (2)</p>
 					</div>
 				</div>
@@ -983,39 +921,6 @@
 			</div>
 			<!-- Carousel fin -->
 
-				<div class="mix col-md-6 col-lg-3 photography all">
-					<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/MAN/MAN.jpg">
-						<div class="pi-inner" data-toggle="modal" data-target="#modal1">
-							<h2>+ See project</h2>
-						</div>
-					</a>
-					<div class="portfolio-meta">
-						<h2>OMBRE ET LUMIÈRE</h2>
-						<p>Photographies (1)</p>
-					</div>
-				</div>
-
-				<!-- Carousel -->
-				<div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-					<div class="modal-dialog" role="document">
-						<div class="modal-content" >
-							<!-- <div class="modal-body"> -->
-								<div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
-									<div class="carousel-inner">
-
-										<div class="carousel-item active">
-											<img class="d-block w-100" src="img/portfolio/MAN/MAN.jpg" alt="First slide">
-										</div>
-
-									<!-- -->
-									</div>
-									<!-- -->
-								</div>
-						</div>
-					</div>
-				</div>
-			<!-- Carousel fin -->
-
 			<div class="mix col-md-6 col-lg-3 photography all">
 				<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PORTRAIT_LUMIERE/PORTRAIT_LUMIERE.jpg">
 					<div class="pi-inner" data-toggle="modal" data-target="#modal5">
@@ -1052,7 +957,6 @@
 		</div>
 	</section>
 	<!-- portfolio section end -->
-
 
 	<!-- footer section start -->
 	<footer class="footer-section text-center">
