--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 										<div class="carousel-item">
 											<img class="d-block w-100" src="img/portfolio/Antti_Lovag_Palais_Bulles_de_Pierre_Cardin/Antti_Lovag_Palais_Bulles_de_Pierre_Cardin_4.jpg" alt="Fourth slide">
 										</div>
-										
+
 									<!-- -->
 									</div>
 									<!-- -->
@@ -843,6 +843,39 @@
 
 									<div class="carousel-item active">
 										<img class="d-block w-100" src="img/portfolio/TYPOGRAPHIE_ZAHA_HADID/TYPOGRAPHIE_ZAHA_HADID.jpg" alt="First slide">
+									</div>
+
+								<!-- -->
+								</div>
+								<!-- -->
+							</div>
+					</div>
+				</div>
+			</div>
+			<!-- Carousel fin -->
+
+			<div class="mix col-md-6 col-lg-3 graphicdesign all">
+				<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/JUNGLE/Jungle_0.jpg">
+					<div class="pi-inner" data-toggle="modal" data-target="#modal24">
+						<h2>+ See project</h2>
+					</div>
+				</a>
+				<div class="portfolio-meta">
+					<h2>DESSIN<br>JUNGLE</h2>
+					<p>Projets (1)</p>
+				</div>
+			</div>
+
+			<!-- Carousel -->
+			<div class="modal fade" id="modal24" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content" >
+						<!-- <div class="modal-body"> -->
+							<div id="carouselExampleControls24" class="carousel slide" data-ride="carousel">
+								<div class="carousel-inner">
+
+									<div class="carousel-item active">
+										<img class="d-block w-100" src="img/portfolio/JUNGLE/Jungle.png" alt="First slide">
 									</div>
 
 								<!-- -->
