--- a/index.html
+++ b/index.html
@@ -625,56 +625,6 @@
 			</div>
 		<!-- Carousel fin -->
 
-		<div class="mix col-md-6 col-lg-3 graphicdesign all">
-			<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/KID/kid.jpg">
-				<div class="pi-inner" data-toggle="modal" data-target="#modal21">
-					<h2>+ See project</h2>
-				</div>
-			</a>
-			<div class="portfolio-meta">
-				<h2>KID</h2>
-				<p>Projets (3)</p>
-			</div>
-		</div>
-
-		<!-- Carousel -->
-		<div class="modal fade" id="modal21" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content" >
-					<!-- <div class="modal-body"> -->
-						<div id="carouselExampleControls21" class="carousel slide" data-ride="carousel">
-							<div class="carousel-inner">
-
-								<div class="carousel-item active">
-									<img class="d-block w-100" src="img/portfolio/KID/kid.jpg" alt="First slide">
-								</div>
-
-								<div class="carousel-item ">
-									<img class="d-block w-100" src="img/portfolio/KID/kid_2.jpg" alt="Second slide">
-								</div>
-
-								<div class="carousel-item ">
-									<img class="d-block w-100" src="img/portfolio/KID/kid_3.jpg" alt="Third slide">
-								</div>
-
-							<!-- -->
-							</div>
-							<!-- -->
-
-							<a class="carousel-control-prev" href="#carouselExampleControls21" role="button" data-slide="prev">
-								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-								<span class="sr-only">Previous</span>
-							</a>
-							<a class="carousel-control-next" href="#carouselExampleControls21" role="button" data-slide="next">
-								<span class="carousel-control-next-icon" aria-hidden="true"></span>
-								<span class="sr-only">Next</span>
-							</a>
-						</div>
-				</div>
-			</div>
-		</div>
-		<!-- Carousel fin -->
-
 				<div class="mix col-md-6 col-lg-3 photography all">
 					<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/BRUXELLES_QUARTIER_EUROPEEN/BRUXELLES_QUARTIER_EUROPEEN_1.jpg">
 						<div class="pi-inner" data-toggle="modal" data-target="#modal7">
@@ -821,47 +771,14 @@
 				</div>
 			<!-- Carousel fin -->
 
-			<div class="mix col-md-6 col-lg-3 graphicdesign all">
-				<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/TYPOGRAPHIE_ZAHA_HADID/TYPOGRAPHIE_ZAHA_HADID.jpg">
-					<div class="pi-inner" data-toggle="modal" data-target="#modal22">
-						<h2>+ See project</h2>
-					</div>
-				</a>
-				<div class="portfolio-meta">
-					<h2>TYPOGRAPHIE<br>INSPIRATION ZAHA HADID</h2>
-					<p>Projets (1)</p>
-				</div>
-			</div>
-
-			<!-- Carousel -->
-			<div class="modal fade" id="modal22" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content" >
-						<!-- <div class="modal-body"> -->
-							<div id="carouselExampleControls22" class="carousel slide" data-ride="carousel">
-								<div class="carousel-inner">
-
-									<div class="carousel-item active">
-										<img class="d-block w-100" src="img/portfolio/TYPOGRAPHIE_ZAHA_HADID/TYPOGRAPHIE_ZAHA_HADID.jpg" alt="First slide">
-									</div>
-
-								<!-- -->
-								</div>
-								<!-- -->
-							</div>
-					</div>
-				</div>
-			</div>
-			<!-- Carousel fin -->
-
-			<div class="mix col-md-6 col-lg-3 graphicdesign all">
+			<div class="mix col-md-6 col-lg-3 illustration all">
 				<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/JUNGLE/Jungle_0.jpg">
 					<div class="pi-inner" data-toggle="modal" data-target="#modal24">
 						<h2>+ See project</h2>
 					</div>
 				</a>
 				<div class="portfolio-meta">
-					<h2>DESSIN<br>JUNGLE</h2>
+					<h2>ILLUSTRATION<br>JUNGLE FARFELU</h2>
 					<p>Projets (1)</p>
 				</div>
 			</div>
